updated API links and notes from tutor session

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="hero">
         <h1 class="app-title">
-          <i class="fab fa-github"></i> Weather Dashboard
+          <i class="fab fa-openWeather"></i> Weather Dashboard
         </h1>
         
       </header>
@@ -55,7 +55,7 @@
       </div>
     </main>
 
-    <script src="./js/index.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 </html>
