--- a/index.html
+++ b/index.html
@@ -46,12 +46,17 @@
     <div class="col-12 col-md-8">
         <h2 class="subtitle"> Chosen City (text will need to update with search) <span id="city-term"></span></h2>
         <div id="searchCity-container" class="now-weather"></div>
-      </div>
-    </main>
+          <div class="col-lg-9">
+            <section id="today-weather">
+              HELLO
+            </section>
+          <h2 class="subtitle"> 5-Day Forecast: <span id="5day-searchterm"></span></h2> <!--can be done dynamically with js -> grab with querySelector and then add textContent to pass in the title-->
+          <div id="5day-container" class="5day-weather"></div>
+            <section id="5day-input" class="week-weather">
 
-    <div class="col-12 col-md-8">
-        <h2 class="subtitle"> 5-Day Forecast: <span id="5day-searchterm"></span></h2>
-        <div id="5day-container" class="5day-weather"></div>
+            </section>
+            </section>
+          </div>
       </div>
     </main>
 
